[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/player2.gd" type="Script" id=1]
[ext_resource path="res://sprites/arcade_platformerV2.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
resource_name = "circle1"
radius = 7.0

[sub_resource type="CapsuleShape2D" id=10]
resource_name = "capsule1"
radius = 7.0
height = 2.0

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 6, 12, 20, 20 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 70, 44, 20, 20 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.1
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 6, 12, 20, 20 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 38, 44, 20, 20 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 6, 44, 20, 20 ), Rect2( 6, 12, 20, 20 ), Rect2( 38, 12, 20, 20 ), Rect2( 6, 12, 20, 20 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "fall"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 0.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.3, 0.85 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "jump"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 0.5, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.85, 1.3 ), Vector2( 1, 1 ) ]
}

[node name="player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false
offset = Vector2( -10, -20 )
region_enabled = true
region_rect = Rect2( 6, 12, 20, 20 )

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 1 )

[node name="shape2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -7 )
rotation = 1.5708
shape = SubResource( 10 )
disabled = true

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 9 )
anims/fall = SubResource( 5 )
anims/idle = SubResource( 3 )
anims/jump = SubResource( 6 )
anims/walk = SubResource( 4 )

[node name="animScale" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 11 )
anims/fall = SubResource( 12 )
anims/jump = SubResource( 13 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = true
smoothing_enabled = true
smoothing_speed = 16.0
offset_v = -1.0

[node name="rayCast1" type="RayCast2D" parent="."]
visible = false
position = Vector2( -6, -4 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="rayCast2" type="RayCast2D" parent="."]
visible = false
position = Vector2( 6, -4 )
enabled = true
cast_to = Vector2( 0, 5 )
